# native-shell

./: .dockerignore  .gitignore  Makefile  README.md  build-requirements.txt  go.mod  go.sum  main.go  pyproject.toml  tox.ini
examples/echo/: Dockerfile  hello-everyone.v1.yaml  hello-world.v1.yaml
experiments/: script-environment.md  script-language.md  test-echo.yaml
lib/ast/: model.go  parameters.go  parameters_test.go
lib/cmd/: gen.go  help.go  invalid.go  parser.go  paths.go
lib/display/: colors.go  colors_test.go  model.go  print.go  print_test.go  split.go  split_test.go
src/native_shell/: __init__.py  __main__.py
src/native_shell/addin_loader/: __init__.py  loader.py
src/native_shell/astgen/: __init__.py  assign_type.py  gen_final.py  gen_root_type.py  node_validator.py  node_visit.py  typed_tree.py
src/native_shell/built_ins/: __init__.py
src/native_shell/built_ins/core/: core.py  echo.py  error.py
src/native_shell/builtins/: __init__.py
src/native_shell/builtins/core/: __init__.py  consts.py  core.py  echo.py  error_field.py  os_file_field.py  sequential.py  simple_field.py  simple_parameters.py
src/native_shell/cli/: main.py
src/native_shell/codegen/: __init__.py  assemble.py  code_map.py  expand_template.py  gen_files.py  generate.py  references.py  tree_visitor.py
src/native_shell/defs/: __init__.py  basic.py  script.py
src/native_shell/generator/: __init__.py  gen_files.py  generate.py  static_files.py
src/native_shell/helpers/: __init__.py  default_field.py  default_list_type.py  default_parameter.py  default_type.py  list_types.py  reference.py
src/native_shell/preparer/: __init__.py  final_pass.py  node_visit.py  prep_builder.py  state_check.py
src/native_shell/script_parser/: __init__.py
src/native_shell/util/: message.py  result.py
tests/helpers/: parsed.py
tests/unit_tests/astgen/: test_assign_type.py  test_gen_final.py  test_node_visit.py
tests/unit_tests/cli/: test_main.py
tests/unit_tests/integration/: test_echo.py  test_v1.py
tests/unit_tests/script_parser/: test_v1.py
(+19 files in other folders)
