[project]
name = "native-shell-builder"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typing-extensions>=4.5",
    "pyyaml>=6.0",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.2"
addopts = [
    "--import-mode=importlib",
]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.coverage.run]
source = ["src"]
branch = true
timid = true

[tool.coverage.report]
fail_under = 95

[tool.mypy]
python_version = "3.9"
mypy_path = ["src", "tests"]

[tool.pylint."messages control"]
disable = ["duplicate-code"]
