[project]
name = "native-shell-builder"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typing-extensions>=4.5",
    "pyyaml>=6.0",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.2"
addopts = [
    "--import-mode=importlib",
]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.coverage.run]
source = ["src"]
branch = true
timid = true
omit = [".*?/__main__.py"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "\\.\\.\\.",
]

[tool.mypy]
python_version = "3.9"
mypy_path = ["src", "tests"]

[tool.pylint."messages control"]
disable = ["duplicate-code"]
